# easy-review

./: .env.signing.example  .envrc  .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  TEST_COVERAGE_ANALYSIS.md  agent.md  config.toml.example  export-issues-prs.md  install.sh  justfile
.airlock/: config.sh
.cargo/: config.toml
.claude/: settings.json
.claude/commands/: er-checklist.md  er-professor.md  er-publish.md  er-questions.md  er-quiz-review.md  er-quiz.md  er-refresh.md  er-review-api.md  er-review-mentorship.md  er-review-patterns.md  er-review-performance.md  er-review-reliability.md  er-review-security.md  er-review-simplifying.md  er-review-testing.md  er-review.md  er-risk-sort.md  er-summary.md  er-tour.md  er-triage.md  er-wizard.md
.github/workflows/: ci.yml  release.yml
.playwright-mcp/: page-2026-05-13T09-17-14-720Z.yml
brand/: THEMES-AND-ICON-HANDOFF.md
crates/er-desktop/: Cargo.toml  agent.md  tauri.conf.json
crates/er-desktop/capabilities/: browser-remote.json  default.json
crates/er-desktop/icons/: icon.icns
crates/er-desktop/permissions/: app-commands.toml  browser-host.toml  run-branch-triage.toml  run-pr-triage.toml
crates/er-desktop/src/: arena_commands.rs  auto_triage.rs  browser_proxy.rs  browser_webview.rs  commands.rs  config_commands.rs  dev_log.rs  er_storage.rs  export.rs  frame_script.rs  gh_status_cache.rs  highlight_state.rs  inbox.rs  lib.rs  main.rs  main_webview_policy.rs  pr_cache.rs  pr_open_cache.rs  preemptive.rs  profile_log.rs  projects.rs  snapshot.rs  tabs.rs  terminal.rs  window_placement.rs
crates/er-engine/: Cargo.toml
crates/er-engine/src/: CLAUDE.md  agent_runtime.rs  agent_slots.rs  ai_hub_catalog.toml  cache.rs  config.rs  config_desktop_settings.rs  config_settings.rs  dev_log.rs  diff_store.rs  env_path.rs  github.rs  headless_jobs.rs  highlight.rs  lib.rs  model_discovery.rs  paths.rs  pr_cache.rs  projects_pins.rs  review_queue.rs  sidecar_specs.rs  sidecar_summary.rs  sidecar_upload.rs  storage.rs  sync.rs  uninstall.rs
crates/er-engine/src/ai/: CLAUDE.md  comments.rs  experts.rs  finding_cleanup.rs  finding_responses.rs  loader.rs  mod.rs  professor.rs  prompts.rs  relocate.rs  review.rs  scoped_merge.rs  triage.rs
crates/er-engine/src/app/: CLAUDE.md  card_ai_context.rs  card_ai_spawn.rs  filter.rs  mod.rs
crates/er-engine/src/app/state/: agent.md  arena.rs  background.rs  comments.rs  er_import.rs  github_sync.rs  mod.rs  navigation.rs  remote_diff_sync.rs
crates/er-engine/src/arena/: adapter.rs  agents.rs  identity.rs  import.rs  merge.rs  mod.rs  model.rs  orchestrator.rs  projections.rs  registry.rs  schema.rs  storage.rs  voting.rs
crates/er-engine/src/git/: CLAUDE.md  diff.rs  diff_stats.rs  file_kind.rs  mod.rs  status.rs
crates/er-engine/src/watch/: CLAUDE.md  mod.rs
crates/er-engine/tests/: comment_bucket_repro.rs
crates/er-mcp/: Cargo.toml  README.md
crates/er-mcp/src/: main.rs  projects.rs  server.rs
crates/er-tui/: Cargo.toml
crates/er-tui/src/: install_skills.rs  main.rs
crates/er-tui/src/input/: mod.rs  normal.rs
crates/er-tui/src/ui/: CLAUDE.md  diff_view.rs  file_tree.rs  highlight.rs  mod.rs  overlay.rs  panel.rs  settings.rs  status_bar.rs  styles.rs  themes.rs  utils.rs
design-polish/: README.md  app.jsx  chrome.jsx  diff-view.jsx  files-rail.jsx  index.html  right-rail.jsx  terminal.jsx  toast.jsx
design-polish/Arena-design/: app.jsx  arena-launcher.jsx  arena.jsx  data-agents.jsx  data.jsx  easy-review.html  file-picker.jsx  index.html  left-rail.jsx  review-empty-states.jsx  review-multi.jsx  right-rail.jsx  tokens.css
desktop-ui/: agent.md  index.html  package.json  tsconfig.json  vite.config.ts
desktop-ui/.storybook/: main.ts  preview.ts
desktop-ui/scripts/: open-storybook.ts  screenshot-mocks.ts  screenshot-sidebar.ts  screenshot-stories.ts
desktop-ui/src/: App.svelte  app.css  main.ts
desktop-ui/storybook-static/: iframe.html  index.html  index.json  project.json
docs/: DEVELOPMENT.md  ai-provider-compliance.md  config-reference.md  desktop-overview.md  github-sync-architecture.md  index.html  mobile-port.md  mockup-ui-refactor.html  mockups.html  platform-strategy.md  spec-ai-integration.md
docs/guide/: ai-review.html  comments.html  concepts.html  configuration.html  desktop-features.html  desktop.html  diff-modes.html  github.html  guide-mode.html  index.html  installation.html  mcp.html  quick-start.html  reviewing.html  skills.html  storage.html  troubleshooting.html  tui-keybindings.html  tui.html
docs/plans/: README.md  plan-agent-panel.md  plan-code-references.md  plan-comments.md  plan-commit-history.md  plan-expert-review-agents.md  plan-features.md  plan-flat-diff-view-review.md  plan-performance.md  plan-pr-overview.md  plan-recent-mode.md  plan-tui-desktop-ai-storage.md  plan-ui-refactor.md  plan-unified-view-buckets-and-perf.md  plan-watched-files.md
docs/release-notes/: ai-reviews-in-guide-mode.md  clickable-links-in-pr-description.md  colocated-tests-in-guide.md  copy-inline-thread-actions.md  fix-embedded-browser-crash-on-external-sites.md  gh-rate-limit-slimming.md  per-view-review-scoping.md  remove-external-skills-use-ai-hub.md  renamed-files-stuck-on-loading.md  triage-recommended-files-quick-select.md
internal-docs/: background-prefetch-new-diff-ready.md  gh-rate-limit-slimming.md  paid-cloud-architecture.md
npm/er-mcp/: README.md  package.json
prototype/: index.html
scripts/: cargo-gc.sh  cloud-agent-install.sh  er-cleanup  er-cleanup-all  er-cleanup-questions  er-cleanup-reviews  er-freshness-check  er-freshness-check.sh  er-gb-diff  er-hash-files  er-hash-files.sh  er-jj-diff  er-tui.sh  generate-test-fixtures.sh  preflight-desktop.sh  tauri-build.sh  tauri-dev.sh  tauri-sign-release.sh
skills/: PROFESSOR_PHILOSOPHY.md  README.md  REVIEW_PHILOSOPHY.md  REVIEW_RULES.md
skills/er-checklist/: SKILL.md
skills/er-professor/: SKILL.md
skills/er-publish/: SKILL.md
src/: CLAUDE.md  archwatch.rs  config.rs  gitbutler.rs  github.rs  main.rs
(+331 files in other folders)
