[workspace]
resolver = "2"
members = ["crates/er-engine", "crates/er-tui", "crates/er-desktop"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/VilfredSikker/easy-review"

[workspace.dependencies]
# shared deps — pin once, reuse across crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sha2 = "0.10"
sha1 = "0.10"
glob = "0.3"
toml = "1"
dirs = "6"
notify = "8"
notify-debouncer-mini = "0.7"

[profile.release]
opt-level = 3
lto = true
strip = true
