[package]
name = "er-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "er-desktop"
path = "src/main.rs"

[dependencies]
er-engine = { path = "../er-engine" }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-clipboard-manager = "2"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
