[package]
name = "er-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "er-desktop"

[[bin]]
name = "er-desktop"
path = "src/main.rs"

[[bin]]
name = "er-tauri-dev"
path = "src/bin/er-tauri-dev.rs"

[dependencies]
er-engine = { path = "../er-engine" }
tauri = { version = "2", features = ["devtools", "unstable", "macos-private-api"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = "2"
tauri-plugin-window-state = "2"
tauri-plugin-notification = "2"
log = "0.4"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio = { version = "1", features = ["full"] }
rfd = "0.15"
dirs.workspace = true
portable-pty = "0.8"
ureq = { version = "2", default-features = false, features = ["tls"] }
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }

[target.'cfg(target_os = "macos")'.dependencies]
notify-rust = "4.17"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
