[package]
name = "er-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UI-agnostic engine for easy-review (git diffs, watching, AI sidecars, GitHub)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
sha2.workspace = true
glob.workspace = true
toml.workspace = true
dirs.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
tui-textarea-2 = { version = "0.10.2", default-features = false, features = ["crossterm"] }

[dev-dependencies]
tempfile = "3"
